--- a/Style.css
+++ b/Style.css
@@ -48,6 +48,7 @@ body{
 }
 .resultArea{
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -58,7 +59,7 @@ h2{
     text-align: center;
 }
 
-#showSentence, #score{
+#showSentence, #score, #accurancy{
     font-size: 1.6rem;
     margin: 2rem 0;
     letter-spacing: .02rem;
