--- a/Style.css
+++ b/Style.css
@@ -11,6 +11,31 @@ body{
     color: var(--textPrimary);
     font-size: 1.4rem;
 }
+nav {
+    background-color: #333;
+    padding: 10px;
+  }
+  
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  li {
+    display: inline-block; 
+    margin-right: 20px; 
+    }
+  
+  a {
+    text-decoration: none;
+    color: white; 
+    font-weight: bold;
+  }
+  
+  a:hover {
+    color: #ffcc00;
+  }
 main{
     width: 600px;
     margin: 50px auto;
